--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
    <meta charset="utf-8">
    <title>Service Policy</title>
-   <link rel="icon" type="image/png" href="icon1.png">
+   <link rel="icon" type="image/png" href="Sicon1.png">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css?v=270420211500">
 <link rel="stylesheet" type="text/css" href="css/style.css?v=1303202215">
